Spelling fixes and font change for readability.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 body {
-    background-color: olivedrab;
     background-image: linear-gradient(90deg, #b13c3c, #f0b8f1);
 }
 
@@ -61,6 +60,8 @@ h1:hover {
 
 footer {
     margin-top: 20px;
+    text-align:center;
+    margin: 10px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
 }
 
@@ -148,9 +149,12 @@ a:active {
 }
 
 .rec-name {
-    font-family: "Odinson";
+    font-family: "Norse";
     margin: auto;
-    padding: 10%;
+    padding: 20%;
     font-size: 40px;;
     
+}@font-face {
+    font-family: "Norse";
+    src: url(Resources/Norse.otf)
 }
